conclusion and acknoledgements writton

--- a/paper.tex
+++ b/paper.tex
@@ -201,7 +201,7 @@ time series, forecasting, ensemble methods, machine learning, arbitrating
 
 
 \section{Introduction}\label{sec:intro}
-This paper is the essential part of a seminar work related to Mobile Computing with particular topic \enquote{Ensemble Method for Time Series Forecasting}. It's an assignment in our B.Sc. Computer Science studies at Karlsruhe Institute of Technology. We chose the topic for a number of reasons: One of our personal interests are finance and stock trading. Hence, as the stock prices (and prices at all) are time series, we wanted to dive into the topic of time series predicting tasks and doing so to educate ourselves about financial assets price forecasting. Secondly, the topic is narrowly connected with machine learning - a field of computer science with great significance and endless potential, in which we are motivated to develop ourselves. Through our researches we will get to know more or less its basics.       
+This paper is the essential part of a seminar work related to Mobile Computing with particular topic \enquote{Ensemble Method for Time Series Forecasting}. It's an assignment in our B.Sc. Computer Science studies at Karlsruhe Institute of Technology. We chose the topic for a number of reasons: One of our personal interests is finance and stock trading. Hence, as the stock prices (and prices at all) are time series, we wanted to dive into the topic of time series predicting tasks and doing so, to educate ourselves about financial assets price forecasting. Secondly, the topic is narrowly connected with machine learning - a field of computer science with great significance and endless potential, in which we are motivated to develop ourselves. Through our researches we will lay a solid and reliable knowledge foundation that we can build upon in the near future.       
 
 \section{Fundamentals of time series forecasting}
 
@@ -563,9 +563,10 @@ The results conclude that updating the meta-learners and not updating the base-l
 \hspace{1cm}\\\\ While the advantages of the proposed method are evident and its performance is competitive with the commonly used stacked generalization method [30], ADE has also limitations. One of them is the inability to directly model inter-dependencies among the forecasters. Another is the fact that base-learners might get outdated, but thanks to the modular architecture of the arbitration approach, models can be added (or removed) as required.
 
 \section{Conclusion}
+We presented a new ensemble method for time series forecasting based on the paper of 4 Portuguese scientists at University of Porto\cite{VtorCerqueira2017}. In order to have a better understanding of the subject, we did a lot of research about the origins of the time series forecasting. This made it possible to include in our paper more information about the machine learning aspects of the subject and the commonly used predicting methods in the past. We concentrated our attention also on the experiment that proves empirically the competitiveness of this new meta-learning approach against other state-of-the-art methods. By working on this paper, we became highly motivated to apply and also to expand our knowledge in the field of machine learning and time series forecasting.  
 
 \subsubsection{Acknowledgments}
-
+\hspace{1cm}\\\\This work was made possible thanks to the Karlsruhe Institute of Technology by providing us with access to scholarly articles, journals etc. We thank the TECO research group and more specifically our supervisor Nhung Ngo for the practical tips and the overall help. We want to express our special thanks to Vitor Cerqueira, one of the authors of the paper \enquote{Arbitrated Ensemble for Time Series Forecasting}, for giving us access to additional materials related to the subject through the ReaseachGate portal. Other honourable mentions are Erik Pescara, Sonya Voneva and Kristian Kralev.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{splncs03}
 \bibliography{paper}
